Added query functions to TermCollection